--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <body>
         <script type="text/javascript" src="/index.js"></script>
         <h1>WELCOME TO THE HYBRIDS WIKI</h1>
-        <p>This page contains information about a Wublin-style MSM class I made!</p>
+        <p>This page contains information about an old Wublin-style MSM class I made!</p>
+        <p>NOTE: This wiki is currently WIP.</p>
+
         <p>Powered by Github Pages.</p>
     </body>
 </html>
