--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <script type="text/javascript" src="/index.js"></script>
+        <script type="text/javascript" src="/hybrids-wiki/index.js"></script>
         <h1>WELCOME TO THE HYBRIDS WIKI</h1>
         <p>This page contains information about an old Wublin-style MSM class I made!</p>
         <p>NOTE: This wiki is currently WIP.</p>
